# Mutli-Tenant-Pharmacy-Backend

./: .env.example  .gitignore  README.md  manage.py  pyproject.toml
.github/: copilot-instructions.md
apps/: __init__.py
apps/accounts/: __init__.py  models.py  serializers.py  views.py
apps/accounts/migrations/: 0001_initial.py  0002_alter_user_managers.py
apps/audit/: __init__.py  models.py  services.py
apps/audit/migrations/: 0001_initial.py
apps/catalog/: __init__.py  models.py  serializers.py  services.py  views.py
apps/catalog/migrations/: 0001_initial.py
apps/inventory/: __init__.py
apps/sales/: __init__.py
apps/tenants/: __init__.py  models.py  serializers.py  services.py  views.py
apps/tenants/migrations/: 0001_initial.py
config/: urls.py
config/api/: __init__.py
config/api/v1/: urls.py
config/settings/: __init__.py  base.py  production.py  test.py
core/: middleware.py  models.py  repositories.py  services.py  tenant_context.py
core/api/: __init__.py  exceptions.py  permissions.py
pharmacy_saas.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: __init__.py  test_tenant_api.py
