[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pharmacy-saas"
version = "0.1.0"
description = "Multi-tenant pharmacy management SaaS backend"
requires-python = ">=3.12"
dependencies = [
    "Django>=5.0,<6.0",
    "djangorestframework>=3.15,<4.0",
    "djangorestframework-simplejwt>=5.3,<6.0",
    "django-filter>=24.0,<26.0",
    "psycopg[binary]>=3.1,<4.0",
    "python-dotenv>=1.0,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-django>=4.8,<5.0",
    "pytest-cov>=5.0,<7.0",
    "ruff>=0.6,<1.0",
    "mypy>=1.10,<2.0",
    "django-stubs[compatible-mypy]>=5.0,<6.0",
]

[tool.setuptools.packages.find]
include = ["config*", "core*", "apps*", "tests*"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = ["tests.py", "test_*.py", "*_tests.py"]

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = ["*/migrations/*", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "DJ"]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
strict = true

[tool.django-stubs]
django_settings_module = "config.settings.test"
